# polyedge

./: .gitignore  CMakeLists.txt  Makefile  README.md  polyedge_test_script.sh
src/cli/: main.c
src/core/: api.c  engine_internal.c  polyedge.c
